--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -23,11 +23,13 @@
       border: 1px solid;
       width: 35%;
       height: 75px;
+      line-height: 75px;
       font-size: 2.3rem;
       background-color: $color-secondary;
       color: white;
       border-radius: 30px;
       margin-top: 30px;
+      text-align: center;
     }
   }
   
