--- a/src/Main/views/InfoSex/stylesheet.scss
+++ b/src/Main/views/InfoSex/stylesheet.scss
@@ -24,27 +24,26 @@
 
   }
   
-  &__control {
-    position: relative;
-    margin-top: 50px;
+  &__sex {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px auto;
 
-    &--input {
-      position: absolute;
-      border: 5px solid $color-secondary;
-      border-radius: 15px;
-      width: 100%;
-      height: 144px;
-      font-size: 48px;
-      text-align: center;
+    &--btn {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      font-size: 3rem;
+      font-weight: normal;
       background-color: white;
     }
 
-    &--confirm {
-      position: absolute;
-      right: 50px;
-      top: 50px;
-      width: 43.4px;
-      height: 43.4px;
+
+    &--btn:hover {
+      border: 5px solid $color-secondary;
+      color: $color-secondary;
     }
   }
 }
