질문 선택하는 페이지 완성 및 결과 페이지 수정
- 크기조절하는 부분 수정해야함
- 질문 수에 따른 Gauge Bar 수정해야함
- 자동으로 넘어가는 부분 완성해야함

--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -11,7 +11,7 @@
     transform: translateY(-50%);
 
     &--text {
-      font-size: 4rem;
+      font-size: 3.5rem;
       font-weight: lighter;
 
       strong {
@@ -22,8 +22,8 @@
     &--btn {
       border: 1px solid;
       width: 35%;
-      height: 75px;
-      line-height: 75px;
+      height: 5vh;
+      line-height: 5vh;
       font-size: 2.3rem;
       background-color: $color-secondary;
       color: white;
