--- a/src/Main/views/Main/stylesheet.scss
+++ b/src/Main/views/Main/stylesheet.scss
@@ -1,9 +1,10 @@
 @import 'common/stylesheet/index.scss';
 
 .main {
-  width: 100%;
+  width: 100vw;
   max-width: 800px;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   margin: 0 auto;
   position: relative;
   background-color: $color-theme;
