--- a/src/Main/views/Qna/stylesheet.scss
+++ b/src/Main/views/Qna/stylesheet.scss
@@ -2,37 +2,69 @@
 
 .qna {
   width: 100%;
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
 
-  &__info {
-    padding: 20px;
-    width: 100%;
-    position: absolute;
-    top: 40%;
-    transform: translateY(-50%);
+  &__qusetion {
     text-align: center;
   }
-  
-  &__control {
-    position: relative;
+
+  &__list {
     margin-top: 50px;
 
-    &--input {
-      position: absolute;
-      border: 5px solid $color-secondary;
-      border-radius: 15px;
-      width: 100%;
-      height: 144px;
-      font-size: 48px;
-      text-align: center;
+    &--answer {
+      display: inline-block;
+      flex-wrap: wrap;
+      width: 30%;
+      line-height: 3rem;
+      margin: 2% 1.6%;
       background-color: white;
+      border-radius: 25px;
+      font-size: 1.3rem;
+      text-align: center;
     }
 
-    &--confirm {
-      position: absolute;
-      right: 50px;
-      top: 50px;
-      width: 43.4px;
-      height: 43.4px;
+    &--answer:hover {
+      background-color: $color-secondary;
+      color: white;
+    }
+
+    &--pick {
+      display: inline-block;
+      flex-wrap: wrap;
+      width: 30%;
+      line-height: 3rem;
+      margin: 2% 1.6%;
+      background-color: white;
+      border-radius: 25px;
+      border: 3px solid $color-secondary;
+      font-size: 1.3rem;
+      text-align: center;
+      color: $color-secondary;
+      font-weight: bold;
+    }
+  }
+
+  &__confirm {
+    width: 100%;
+    position: absolute;
+    bottom: 30px;
+
+    &__btn{
+      margin: auto;
+      width: 30%;
+      line-height: 3.5rem;
+      background-color: $color-secondary;
+      border-radius: 40px;
+      color: white;
+      font-size: 1.5rem;
+      text-align: center;
+    }
+
+    &__btn:hover {
+      background-color: white;
+      color: $color-secondary;
     }
   }
 }
