뒤로가기 버튼 활성화 및 질문페이지 부분 컴포넌트로 빼서 관리 및 페이지 이동간 애니메이션 적용 중
애니메이션 부분 오류 있어서 해결해야함

--- a/src/Main/views/InfoQna/stylesheet.scss
+++ b/src/Main/views/InfoQna/stylesheet.scss
@@ -1,7 +1,9 @@
 @import 'common/stylesheet/index.scss';
 
 .qna {
-  width: 100%;
+  position: absolute;
+  top: 10vh;
+  left: 0;
 
   &__info {
     padding: 20px;
