--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -49,35 +49,24 @@
     overflow: auto;
     border: 4px solid $color-secondary;
     border-radius: 5px;
-    width: 70%;
-    height: 500px;
-    background-color: $color-theme;
+    width: 90%;
+    height: 65vh;
+    background-color: white;
+    z-index: 10;
     
     button {
-      border: 2px solid $color-secondary;
+      // border-bottom: 0.7px solid $color-secondary;
       width: 100%;
-      height: 80px;
-      font-size: $font_size-28;
+      height: 6rem;
+      font-size: 2.5rem;
     }
     
     button:hover {
-        background-color: darkcyan;
+      background-color: $color-secondary;
       color: white;
     }
   }
   
-  &--select::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  &--select::-webkit-scrollbar-thumb {
-    background-color: #2f3542;
-  }
-  
-  &--select::-webkit-scrollbar-track {
-    background-color: grey;
-  }
-
   &--confirm {
     position: absolute;
     right: 50px;
