필요없는 페이지 삭제 및 전체 틀 변화 및 결과페이지 디자인 수정
결과페이지 애니매이션 넣어야함 & 공유페이지 적용해야함

--- a/src/Main/views/InfoQna/stylesheet.scss
+++ b/src/Main/views/InfoQna/stylesheet.scss
@@ -1,17 +1,14 @@
 @import 'common/stylesheet/index.scss';
 
 .qna {
-  position: absolute;
-  top: 10vh;
-  left: 0;
-  right: 0;
+  height: 60vh;
 
   &__info {
     padding: 20px;
     width: 100%;
     position: absolute;
-    top: 40%;
-    transform: translateY(-50%);
+    top: 50%;
+    transform: translateY(-25%);
     text-align: center;
   }
   
