--- a/src/Main/views/Qna/stylesheet.scss
+++ b/src/Main/views/Qna/stylesheet.scss
@@ -3,8 +3,7 @@
 .qna {
   width: 100%;
   position: absolute;
-  top: 40%;
-  transform: translateY(-50%);
+  top: 70px;
 
   &__qusetion {
     text-align: center;
