--- a/src/Main/components/AnswerList/stylesheet.scss
+++ b/src/Main/components/AnswerList/stylesheet.scss
@@ -3,8 +3,10 @@
 .qna__list {
   margin-top: 50px;
   padding: 0 20px;
+  height: 60vh;
+  overflow: auto;
 
-  &--three {
+   &--three {
     display: inline-block;
     flex-wrap: wrap;
     width: 30%;
@@ -14,6 +16,25 @@
     border-radius: 50px;
     font-size: 2rem;
     text-align: center;
+  }
+
+  &--pick {
+    display: inline-block;
+    flex-wrap: wrap;
+    width: 30%;
+    line-height: 5rem;
+    margin: 2% 1.6%;
+    background-color: white;
+    border-radius: 50px;
+    border: 3px solid $color-secondary;
+    font-size: 2rem;
+    text-align: center;
+    color: $color-secondary;
+    font-weight: bold;
+  }
+
+  &--three:hover {
+    border: 3px solid $color-secondary;
   }
 
   &--one:hover {
@@ -69,20 +90,5 @@
     background-color: white;
     border-radius: 25px;
     border: 5px solid $color-secondary;
-  }
-
-  &--pick {
-    display: inline-block;
-    flex-wrap: wrap;
-    width: 30%;
-    line-height: 5rem;
-    margin: 2% 1.6%;
-    background-color: white;
-    border-radius: 50px;
-    border: 3px solid $color-secondary;
-    font-size: 2rem;
-    text-align: center;
-    color: $color-secondary;
-    font-weight: bold;
   }
 }
