--- a/src/Main/components/Header/stylesheet.scss
+++ b/src/Main/components/Header/stylesheet.scss
@@ -1,10 +1,13 @@
 .header {
-  height: 10vh;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
   padding: 30px 20px 0;
   display: flex;
-
   justify-content: space-between;
+  z-index: 100;
 
   &__logo {
    width: 101px;
@@ -13,11 +16,11 @@
 
   &__btn {
     width: 21px;
-   height: 21px;
+    height: 21px;
 
    &--close {
-     width: 100%;
-     height: 100%;
+    width: 100%;
+    height: 100%;
    }
   }
 }
