--- a/src/Main/views/InfoIntro/stylesheet.scss
+++ b/src/Main/views/InfoIntro/stylesheet.scss
@@ -1,14 +1,15 @@
 @import 'common/stylesheet/index.scss';
 
-.qna {
+.intro {
   width: 100%;
-
+  height: 60vh;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-25%);
+  
   &__info {
     padding: 20px;
     width: 100%;
-    position: absolute;
-    top: 40%;
-    transform: translateY(-50%);
     text-align: center;
 
     &--intro {
