이메일 페이지 완료, 결과페이지 Css 수정
결과페이지 디자인 변경 필요, 전체적인 기본 디자인 변경 필요, 반응형 적용 필요, 나이 선택부분 Input창 확인 버튼사이즈 키우기, email 정규식 적용하기, SEO 적용해야함

--- a/src/Main/views/Qna/stylesheet.scss
+++ b/src/Main/views/Qna/stylesheet.scss
@@ -14,15 +14,20 @@
     position: absolute;
     bottom: 3vh;
 
-    &__btn{
+    &__footer{
       margin: auto;
       width: 90%;
       line-height: 5rem;
+      background-color: white;
+      border-radius: 40px;
+      font-size: 2rem;
+      text-align: center;
+    }
+
+    &__btn{
       background-color: $color-secondary;
       border-radius: 40px;
       color: white;
-      font-size: 2rem;
-      text-align: center;
     }
 
     &__btn:hover {
