--- a/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
@@ -14,7 +14,9 @@
   
   .public {
     overflow: auto;
-    width: 50%;
+    width: 90%;
+    max-width: 700px;
+    border-radius: 25px;
     background-color: white;
     position: absolute;
     z-index: 1000;
@@ -31,17 +33,31 @@
       margin: auto;
 
       &--logo {
-        width: 25%;
+        width: 20%;
         margin: 30px auto 0;
+        border-radius: 20px;
       }
 
       &--title {
-        margin-top: 15%;
+        margin: 10% auto 15%;
         font-size: $font_size-rem;
         font-weight: lighter;
 
         span {
           font-weight: bolder;
+        }
+      }
+
+      &--btn {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+
+        &--img {
+          width: 100%;
+          height: 100%;
         }
       }
     }
@@ -50,22 +66,21 @@
       display: flex;
       justify-content: space-between;
       width: 90%;
-      margin: 10% auto;
+      margin: 5% auto;
       list-style: none;
-      padding-left: 0;
+      padding: 0;
       
       &--list {
-        width: 23%;
-        text-align: center;
         margin: auto;
-
+        text-align: center;
+        
         &--img {
-          width: 70%;
+          width: 80%;
           margin: 20px auto;
         }
 
         &--span {
-          font-size: $font_size-18;
+          font-size: 1.2rem;
         }
       }
     }
