반응형 적용하기 위해 CSS 변경 및 결과페이지 펼쳐져서 보이는 부분 수정, SEO 적용
반응형으로 변경해야함

--- a/src/Main/components/Header/stylesheet.scss
+++ b/src/Main/components/Header/stylesheet.scss
@@ -1,3 +1,5 @@
+@import 'common/stylesheet/index.scss';
+
 .header {
   position: absolute;
   top: 0;
@@ -9,18 +11,39 @@
   justify-content: space-between;
   z-index: 100;
 
-  &__logo {
-   width: 101px;
-   height: 101px;
+  @include media('>medium') {
+    &__logo {
+      width: 101px;
+      height: 101px;
+      border-radius: 5px;
+    }
+
+    &__btn {
+      width: 21px;
+      height: 21px;
+
+      &--close {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
-  &__btn {
-    width: 21px;
-    height: 21px;
+  @include media('<=small') {
+    &__logo {
+      width: 50px;
+      height: 50px;
+      border-radius: 5px;
+    }
 
-   &--close {
-    width: 100%;
-    height: 100%;
-   }
+    &__btn {
+      width: 15px;
+      height: 15px;
+
+      &--close {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 }
