--- a/src/Main/components/InfoQuestion/stylesheet.scss
+++ b/src/Main/components/InfoQuestion/stylesheet.scss
@@ -5,9 +5,8 @@
   font-size: 3.5rem;
   font-weight: lighter;
       
-  span {
+  strong {
     color: $color-secondary;
-    font-weight: bolder;
   }
 
   &--sub {
