--- a/src/Main/views/Qna/stylesheet.scss
+++ b/src/Main/views/Qna/stylesheet.scss
@@ -1,9 +1,9 @@
 @import 'common/stylesheet/index.scss';
 
-.qna {
-  width: 100%;
+.customized {
   position: absolute;
   top: 70px;
+  width: 100%;
 
   &__qusetion {
     text-align: center;
