--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -24,21 +24,21 @@
 
 .info__control {
   position: relative;
-  margin-top: 50px;
+  margin: 50px auto 0;
 
   &--input {
-    position: absolute;
     border: 5px solid $color-secondary;
     border-radius: 15px;
-    width: 100%;
-    height: 144px;
-    font-size: 48px;
+    width: 95%;
+    height: 10vh;
+    font-size: 2.5rem;
     text-align: center;
     background-color: white;
+    margin: auto;
 
     span {
-        color: gray;
-      }
+      color: gray;
+    }
   }
 
   &--select {
@@ -55,7 +55,6 @@
     z-index: 10;
     
     button {
-      // border-bottom: 0.7px solid $color-secondary;
       width: 100%;
       height: 6rem;
       font-size: 2.5rem;
@@ -68,10 +67,15 @@
   }
   
   &--confirm {
+    width: 100px;
+    height: 11vh;
     position: absolute;
-    right: 50px;
-    top: 50px;
-    width: 43.4px;
-    height: 43.4px;
+    right: 0;
+    top: 0;
+
+    &--img{
+      width: 43.4px;
+      height: 43.4px;
+    }
   }
 }
