--- a/src/Main/views/InfoIntro/stylesheet.scss
+++ b/src/Main/views/InfoIntro/stylesheet.scss
@@ -1,13 +1,15 @@
 @import 'common/stylesheet/index.scss';
 
 .intro {
+  position: relative;
   width: 100%;
-  height: 60vh;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-25%);
+  height: 70vh;
+  margin-top: 70px;
   
   &__info {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     padding: 20px;
     width: 100%;
     text-align: center;
