--- a/src/Main/views/InfoQna/stylesheet.scss
+++ b/src/Main/views/InfoQna/stylesheet.scss
@@ -1,38 +1,19 @@
 @import 'common/stylesheet/index.scss';
 
 .qna {
-  height: 60vh;
+  position: relative;
+  height: 70vh;
+  margin-top: 70px;
 
   &__info {
-    padding: 20px;
     width: 100%;
+    height: 100%;
     position: absolute;
     top: 50%;
+    left: 0;
+    right: 0;
     transform: translateY(-25%);
     text-align: center;
-  }
-  
-  &__control {
-    position: relative;
-    margin-top: 50px;
-
-    &--input {
-      position: absolute;
-      border: 5px solid $color-secondary;
-      border-radius: 15px;
-      width: 100%;
-      height: 144px;
-      font-size: 48px;
-      text-align: center;
-      background-color: white;
-    }
-
-    &--confirm {
-      position: absolute;
-      right: 50px;
-      top: 50px;
-      width: 43.4px;
-      height: 43.4px;
-    }
+    margin: 0 auto;
   }
 }
