--- a/src/Main/views/Main/stylesheet.scss
+++ b/src/Main/views/Main/stylesheet.scss
@@ -1,12 +1,23 @@
 @import 'common/stylesheet/index.scss';
 
-.main {
-  width: 100vw;
-  max-width: 800px;
-  height: 100vh;
-  margin: 0 auto;
-  position: relative;
-  background-color: $color-theme;
+@include media('>medium') {
+  .main {
+    width: 800px;
+    height: 100vh;
+    margin: 0 auto;
+    position: relative;
+    background-color: $color-theme;
+  }
+}
+
+@include media('<=small') {
+  .main {
+    width: 100vw;
+    height: 100vh;
+    margin: 0 auto;
+    position: relative;
+    background-color: $color-theme;
+  }
 }
 
 .transition-group {
