--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -12,7 +12,7 @@
     &--logo {
       width: 100px;
       height: 100px;
-      margin: auto 0;
+      margin: auto 10px;
       border-radius: 5px;
     }
 
@@ -23,7 +23,8 @@
       h3 {
         font-weight: normal;
         font-size: 2.5rem;
-
+        margin-top: 10px;
+        
         span {
           font-size: 3rem;
           font-weight: bolder;
@@ -31,11 +32,17 @@
       }
 
       p {
+        margin-top: 15px;
         font-size: 1.3rem;
       }
     }
   }
 
+  &__list {
+    width: 100%;
+    height: 70vh;
+    overflow: auto;
+  }
 
   &__control {
     width: 100%;
