--- a/src/common/stylesheet/dimensions.scss
+++ b/src/common/stylesheet/dimensions.scss
@@ -14,7 +14,7 @@ $font_size-10: 10px;
 $font_size-rem: 2rem;
 $font_size-vw: 2vw;
 $font_size-3vw: 3vw;
-$line_height-vh: 2.5vh;
+$line_height-rem: 5rem;
 $line_height-5vh: 5vh;
 $line_height-34: 34px;
 $line_height-30: 30px;
