--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -1,81 +1,191 @@
 @import 'common/stylesheet/index.scss';
 
-.sex {
-  width: 85%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 50px auto;
+@include media('>medium') {
+  .sex {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px auto;
 
-  &__btn {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    font-size: 3rem;
-    font-weight: normal;
-    background-color: white;
+    &__btn {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      font-size: 3rem;
+      font-weight: normal;
+      background-color: white;
+    }
+
+    &__btn:hover {
+      border: 5px solid $color-secondary;
+      color: $color-secondary;
+    }
   }
 
-  &__btn:hover {
-    border: 5px solid $color-secondary;
-    color: $color-secondary;
+  .info__control {
+    position: relative;
+    margin: 50px auto 0;
+
+    &--input {
+      border: 5px solid $color-secondary;
+      border-radius: 15px;
+      width: 95%;
+      height: 144px;
+      font-size: 2.5rem;
+      text-align: center;
+      background-color: white;
+      margin: auto;
+
+      span {
+        color: gray;
+      }
+    }
+
+    &--select {
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      overflow: auto;
+      border: 4px solid $color-secondary;
+      border-radius: 5px;
+      width: 90%;
+      height: 65vh;
+      background-color: white;
+      z-index: 10;
+      
+      button {
+        width: 100%;
+        height: 6rem;
+        font-size: 2.5rem;
+      }
+      
+      button:hover {
+        background-color: $color-secondary;
+        color: white;
+      }
+    }
+    
+    &--confirm {
+      width: 100px;
+      height: 146px;
+      position: absolute;
+      right: 0;
+      top: 0;
+
+      &--img{
+        width: 43.4px;
+        height: 43.4px;
+      }
+    }
+
+    &--check {
+      width: 100px;
+      height: 146px;
+      position: absolute;
+      right: 0;
+      top: 0;
+
+      &--img{
+        width: 43.4px;
+        height: 43.4px;
+      }
+    }
   }
 }
 
-.info__control {
-  position: relative;
-  margin: 50px auto 0;
+@include media('<=small') {
+  .sex {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 50px auto;
 
-  &--input {
-    border: 5px solid $color-secondary;
-    border-radius: 15px;
-    width: 95%;
-    height: 10vh;
-    font-size: 2.5rem;
-    text-align: center;
-    background-color: white;
-    margin: auto;
+    &__btn {
+      width: 165px;
+      height: 165px;
+      border-radius: 50%;
+      font-size: 2rem;
+      font-weight: normal;
+      background-color: white;
+    }
 
-    span {
-      color: gray;
+    &__btn:hover {
+      border: 5px solid $color-secondary;
+      color: $color-secondary;
     }
   }
 
-  &--select {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    overflow: auto;
-    border: 4px solid $color-secondary;
-    border-radius: 5px;
-    width: 90%;
-    height: 65vh;
-    background-color: white;
-    z-index: 10;
-    
-    button {
-      width: 100%;
-      height: 6rem;
-      font-size: 2.5rem;
-    }
-    
-    button:hover {
-      background-color: $color-secondary;
-      color: white;
-    }
-  }
-  
-  &--confirm {
-    width: 100px;
-    height: 11vh;
-    position: absolute;
-    right: 0;
-    top: 0;
+  .info__control {
+    position: relative;
+    margin: 50px auto 0;
 
-    &--img{
-      width: 43.4px;
-      height: 43.4px;
+    &--input {
+      border: 5px solid $color-secondary;
+      border-radius: 15px;
+      width: 95%;
+      height: 80px;
+      font-size: 1.8rem;
+      text-align: center;
+      background-color: white;
+      margin: auto;
+
+      span {
+        color: gray;
+      }
+    }
+
+    &--select {
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      overflow: auto;
+      border: 4px solid $color-secondary;
+      border-radius: 5px;
+      width: 90%;
+      height: 65vh;
+      background-color: white;
+      z-index: 10;
+      
+      button {
+        width: 100%;
+        height: 5rem;
+        font-size: 2rem;
+      }
+      
+      button:hover {
+        background-color: $color-secondary;
+        color: white;
+      }
+    }
+    
+    &--confirm {
+      width: 60px;
+      height: 90px;
+      position: absolute;
+      right: 0;
+      top: 0;
+
+      &--img{
+        width: 30px;
+        height: 30px;
+      }
+    }
+
+    &--check {
+      width: 60px;
+      height: 80px;
+      position: absolute;
+      right: 0;
+      top: 0;
+
+      &--img{
+        width: 30px;
+        height: 30px;
+      }
     }
   }
 }
