--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -1,54 +1,138 @@
 @import 'common/stylesheet/index.scss';
 
-.home {
-  width: 100%;
-
-  &__main {
-    padding: 20px;
+@include media('>medium') {
+  .home {
     width: 100%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-
-    &--text {
-      display: block;
-      font-size: 3.5rem;
-      font-weight: lighter;
-    }
   
-    &--btn {
-      display: block;
-      width: 35%;
-      height: 5vh;
-      line-height: 5vh;
-      font-size: 2.3rem;
-      background-color: $color-secondary;
-      color: white;
-      border-radius: 30px;
-      margin-top: 50px;
+    &__main {
+      padding: 20px;
+      width: 90%;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+
+      &--text {
+        display: block;
+        font-size: 3.5rem;
+        font-weight: lighter; 
+        
+        strong {
+          font-size: 3.6rem;
+          font-weight: 900;
+        }
+      }
+
+      &--btn {
+        display: block;
+        width: 35%;
+        height: 5vh;
+        line-height: 5vh;
+        font-size: 2.3rem;
+        background-color: $color-secondary;
+        color: white;
+        border-radius: 50px;
+        margin-top: 50px;
+        text-align: center;
+      }
+    }
+
+    &__intro {
+      position: absolute;
+      bottom: 4rem;
+      padding-left: 20px;
+      margin-bottom: 10px;
+      font-size: 1.5rem;
+    }
+
+    &__introImg {
+      position: absolute;
+      right: 0;
+      bottom: 0.5rem;
       text-align: center;
+      z-index: 10;
+      margin-right: 20px;
+
+        img {
+          width: 115px;
+          height: 115px;
+          border: 2px solid white;
+          border-radius: 50%;
+          margin: 0 auto 10px;
+        }
+
+        span {
+          padding-top: 20px;
+          font-size: 1.5rem;
+          color: white;
+        }
+      }
+
+      &__footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        max-width: 800px;
+        height: 4rem;
+        background-color: $color-secondary;
+      }
     }
   }
+
+@include media('<=small') {
+  .home {
+    width: 100%;
   
-  &__intro {
-    position: absolute;
-    bottom: 4rem;
-    padding-left: 20px;
-    margin-bottom: 10px;
+    &__main {
+      padding: 20px;
+      width: 90%;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
 
-  }
+      &--text {
+        display: block;
+        font-size: 2.5rem;
+        font-weight: 100;
 
-  &__introImg {
-    position: absolute;
-    right: 0;
-    bottom: 0.5rem;
-    text-align: center;
-    z-index: 10;
-    margin-right: 20px;
+        strong {
+          font-weight: 900;
+          font-size: 2.6rem;
+        }
+      }
+
+      &--btn {
+        display: block;
+        width: 40%;
+        height: 50px;
+        line-height: 50px;
+        font-size: 2rem;
+        background-color: $color-secondary;
+        color: white;
+        border-radius: 30px;
+        margin-top: 50px;
+        text-align: center;
+      }
+    }
+
+    &__intro {
+      position: absolute;
+      bottom: 3rem;
+      padding-left: 20px;
+      margin-bottom: 10px;
+      font-size: 0.8rem;
+    }
+
+    &__introImg {
+      position: absolute;
+      right: 0;
+      bottom: 0.5rem;
+      text-align: center;
+      z-index: 10;
+      margin-right: 20px;
 
       img {
-        width: 115px;
-        height: 115px;
+        width: 65px;
+        height: 65px;
         border: 2px solid white;
         border-radius: 50%;
         margin: 0 auto 10px;
@@ -56,17 +140,17 @@
 
       span {
         padding-top: 20px;
-        font-size: 1.5rem;
+        font-size: 1rem;
         color: white;
       }
     }
 
-  &__footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    max-width: 800px;
-    height: 4rem;
-    background-color: $color-secondary;
+    &__footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      height: 3rem;
+      background-color: $color-secondary;
+    }
   }
 }
