--- a/src/Main/views/InfoIntro/stylesheet.scss
+++ b/src/Main/views/InfoIntro/stylesheet.scss
@@ -5,43 +5,63 @@
   width: 100%;
   height: 70vh;
   margin-top: 70px;
-  
+
   &__info {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    padding: 20px;
-    width: 100%;
+    width: 95%;
     text-align: center;
+    margin: auto 2.5%;
 
-    &--intro {
-      font-size: 3rem;
-      font-weight: lighter;
-      
-      span {
-        color: $color-secondary;
-        font-weight: bolder;
+    @include media('>medium') {
+      &--intro {
+        font-size: 3rem;
+        font-weight: lighter;
+        
+        span {
+          color: $color-secondary;
+          font-weight: bolder;
+        }
+      }
+
+      &--img {
+        width: 300px;
+        height: 300px;
+        margin: 50px auto 30px;
+        border-radius: 50%;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
 
-    &--img {
-      width: 300px;
-      height: 300px;
-      margin: 50px auto 0;
-      border-radius: 50%;
-      overflow: hidden;
+    @include media('<=small') {
+      &--intro {
+        font-size: 2.1rem;
+        font-weight: lighter;
+        
+        span {
+          color: $color-secondary;
+          font-weight: bolder;
+        }
+      }
 
-      img {
-        width: 100%;
-        height: 100%;
+      &--img {
+        width: 200px;
+        height: 200px;
+        margin: 50px auto 20px;
+        border-radius: 50%;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
-}
-
-.next {
-  position: absolute;
-  bottom: 10px;
-  border: 1px solid;
-  z-index: 1000;
 }
