--- a/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
@@ -25,62 +25,125 @@
     opacity: 1;
     transform: translateX(-50%) translateY(-50%);
 
-    &__header {
-      width: 90%;
-      height: 45%;
-      border-bottom: 3px solid;
-      text-align: center;
-      margin: auto;
-
-      &--logo {
-        width: 20%;
-        margin: 30px auto 0;
-        border-radius: 5px;
-      }
-
-      &--title {
-        margin: 10% auto 15%;
-        font-size: $font_size-rem;
-        font-weight: lighter;
-
-        span {
-          font-weight: bolder;
-        }
-      }
-
-      &--btn {
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-
-        &--img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-    }
-
-    &__btn {
-      display: flex;
-      justify-content: space-between;
-      width: 90%;
-      margin: 5% auto;
-      
-      &--list {
-        margin: auto;
+    @include media('>medium') {
+      &__header {
+        width: 90%;
+        height: 45%;
+        border-bottom: 3px solid;
         text-align: center;
-        
-        &--img {
-          width: 80%;
-          margin: 20px auto;
+        margin: auto;
+
+        &--logo {
+          width: 20%;
+          margin: 30px auto 0;
+          border-radius: 5px;
         }
 
-        &--span {
-          font-size: 1.2rem;
+        &--title {
+          margin: 10% auto 15%;
+          font-size: $font_size-rem;
+          font-weight: lighter;
+
+          span {
+            font-weight: bolder;
+          }
+        }
+
+        &--btn {
+          width: 20px;
+          height: 20px;
+          position: absolute;
+          top: 20px;
+          right: 20px;
+
+          &--img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+
+      &__btn {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        margin: 5% auto;
+        
+        &--list {
+          margin: auto;
+          text-align: center;
+          
+          &--img {
+            width: 80%;
+            margin: 20px auto;
+          }
+
+          &--span {
+            font-size: 1.2rem;
+          }
         }
       }
     }
+
+    @include media('<=small') {
+      &__header {
+        width: 90%;
+        height: 45%;
+        border-bottom: 3px solid;
+        text-align: center;
+        margin: auto;
+
+        &--logo {
+          width: 20%;
+          margin: 30px auto 0;
+          border-radius: 5px;
+        }
+
+        &--title {
+          margin: 10% auto 15%;
+          font-size: 1.5rem;
+          font-weight: lighter;
+
+          strong {
+            font-weight: 900;
+          }
+        }
+
+        &--btn {
+          width: 15px;
+          height: 15px;
+          position: absolute;
+          top: 20px;
+          right: 20px;
+
+          &--img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+
+      &__btn {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        margin: 5% auto 13%;
+        
+        &--list {
+          margin: auto;
+          text-align: center;
+          
+          &--img {
+            width: 70%;
+            margin: 20px auto 15px;
+          }
+
+          &--span {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
+    
   }
 }
