--- a/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
@@ -1,144 +1,214 @@
 @import 'common/stylesheet/index.scss';
 
-.prescription {
-  width: 95%;
-  height: 200px;
-  background-color: white;
-  border-radius: 25px;
-  box-shadow: 5px 5px 5px grey;
-  margin: 2.5%;
-  display: flex;
-  position: relative;
-  overflow: hidden;
-
-  &__img {
-    width: 120px;
-    height: 120px;
-    border-radius: 5px;
-    margin: auto 40px auto 20px;
-  }
-
-  &__description {
-    width: 65%;
-    height: 90%;
-    margin: auto 0;
-
-    &--header {
-      font-size: 2rem;
-      margin: 10px;
-      font-weight: bolder;
-    }
-
-    ul {
-      overflow: hidden;
-      height: 100px;
-      margin-top: 20px;
-      padding-left: 5%;
-      list-style-type: circle;
-
-      li {
-        font-size: 1.2rem;
-        margin-bottom: 20px;
-      }
-    }
-  }
-
-  &__bottom {
-    width: 7%;
-    margin: 0 0 0 auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background-color: $color-secondary;
-    color: white;
-
-    &--add {
-      height: 200px;
-      margin: auto;
-      font-size: 40px;
-    }
-  }
-}
-
-.prescription__detail {
-  margin: auto;
-  width: 95%;
-  background-color: white;
-  border-radius: 25px;
-  box-shadow: 5px 5px 5px grey;
-  margin-left: 2.5%;
-  margin-bottom: 2.5%;
-  position: relative;
-  overflow: hidden;
-  margin: 2.5%;
-      
-  &--section {
+@include media('>medium') {
+  .prescription {
+    width: 95%;
     height: 200px;
-    display: flex;
+    background-color: white;
+    border-radius: 25px;
+    box-shadow: 5px 5px 5px grey;
+    margin: 2.5%;
     position: relative;
+    overflow: hidden;
+    transition: height 2s linear;
 
-    &--img {
-      width: 120px;
-      height: 120px;
-      border-radius: 5px;
-      margin: auto 40px auto 20px;
+    &__on {
+      height: 540px;
     }
 
-    &--description {
-      width: 65%;
-      height: 90%;
-      margin: auto 0;
+    &__bottom {
+      width: 7%;
+      margin: 0 0 0 auto;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      background-color: $color-secondary;
+      color: white;
+      transition: background-color 2s linear 1s;
 
-      &--header {
-        margin: 10px;
-        font-size: 2rem;
-        font-weight: bolder;
+      &--add {
+        height: 200px;
+        margin: auto;
+        font-size: 40px;
+      }
+    }
+
+    &__section {
+      width: 100%;
+      height: 200px;
+      display: flex;
+      position: relative;
+
+      &--img {
+        width: 120px;
+        height: 120px;
+        border-radius: 5px;
+        margin: auto 40px auto 20px;
       }
 
-      ul {
-        overflow: hidden;
-        height: 100px;
-        margin-top: 20px;
-        padding-left: 5%;
-        list-style-type: circle;
-        
-        li {
-          font-size: 1.2rem;
-          margin-bottom: 20px;
+      &--description {
+        width: 65%;
+        height: 90%;
+        margin: auto 0;
+
+        &--header {
+          margin: 10px;
+          font-size: 2rem;
+          font-weight: bolder;
+        }
+
+        ul {
+          overflow: hidden;
+          height: 100px;
+          margin-top: 20px;
+          padding-left: 5%;
+          list-style-type: circle;
+          
+          li {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+          }
+        }
+      }
+
+      &--bottom {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        width: 20px;
+        height: 20px;
+
+        &--close {
+          width: 100%;
+          height: 100%;
         }
       }
     }
 
-    &--bottom {
-      position: absolute;
-      top: 30px;
-      right: 30px;
-      width: 20px;
-      height: 20px;
+    &__wrap {
+      width: 90%;
+      margin: 0 auto 5% auto;
 
-      &--close {
-        width: 100%;
-        height: 100%;
+      &--title {
+        display: block;
+        margin-top: 30px;
+        font-size: 1.5rem;
+        font-weight: bolder;
+      }
+
+      ul {
+        li {
+          margin-top: 15px;
+          font-size: 1.1rem;
+        }
       }
     }
   }
+}
 
-  &--wrap {
-    width: 90%;
-    margin: 0 auto 5% auto;
+@include media('<=small') {
+  .prescription {
+    width: 95%;
+    height: 150px;
+    background-color: white;
+    border-radius: 25px;
+    box-shadow: 5px 5px 5px grey;
+    margin: 20px 2.5%;
+    position: relative;
+    overflow: hidden;
+    transition: height 2s linear;
 
-    &--title {
-      display: block;
-      margin-top: 30px;
-      font-size: 1.5rem;
-      font-weight: bolder;
+    &__on {
+      height: 430px;
     }
 
-    ul {
-      li {
-        margin-top: 15px;
-        font-size: 1.1rem;
+    &__bottom {
+      width: 10%;
+      margin: 0 0 0 auto;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      background-color: $color-secondary;
+      color: white;
+      transition: background-color 2s linear 1s;
+
+      &--add {
+        height: 150px;
+        margin: auto;
+        font-size: 2rem;
+      }
+    }
+
+    &__section {
+      width: 100%;
+      height: 150px;
+      display: flex;
+      position: relative;
+
+      &--img {
+        width: 80px;
+        height: 80px;
+        border-radius: 5px;
+        margin: auto 25px auto 20px;
+      }
+
+      &--description {
+        width: 60%;
+        height: 90%;
+        margin: auto 0;
+
+        &--header {
+          margin: 10px;
+          font-size: 1.5rem;
+          font-weight: bolder;
+        }
+
+        ul {
+          overflow: hidden;
+          height: 100px;
+          margin-top: 20px;
+          padding-left: 5%;
+          list-style-type: circle;
+          
+          li {
+            font-size: 0.9rem;
+            margin-bottom: 15px;
+          }
+        }
+      }
+
+      &--bottom {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 15px;
+        height: 15px;
+
+        &--close {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+
+    &__wrap {
+      width: 90%;
+      margin: 0 auto 5% auto;
+
+      &--title {
+        display: block;
+        margin-top: 25px;
+        font-size: 1rem;
+        font-weight: bolder;
+      }
+
+      ul {
+        li {
+          margin-top: 15px;
+          font-size: 0.8rem;
+        }
       }
     }
   }
