--- a/src/Main/views/Main/stylesheet.scss
+++ b/src/Main/views/Main/stylesheet.scss
@@ -25,14 +25,15 @@
   position: relative;
 }
 
-.fade-enter, .fade-appear {
+.fade-enter,
+.fade-appear {
   opacity: 0;
   z-index: 1;
 
   &-active {
     opacity: 1;
     transition: opacity 300ms linear 150ms;
-  }  
+  }
 }
 
 .fade-exit {
