--- a/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
@@ -1,17 +1,17 @@
 @import 'common/stylesheet/index.scss';
 
 .popup__wrap {
-  overflow:hidden;
-  position:fixed;
-  top:0;
-  right:0;
-  bottom:0;
-  left:0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   z-index: 100;
-  width:100%;
-  height:100%;
-  background-color: rgba(0, 0, 0, .7);
-  
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+
   .public {
     overflow: auto;
     width: 90%;
@@ -68,11 +68,11 @@
         justify-content: space-between;
         width: 90%;
         margin: 5% auto;
-        
+
         &--list {
           margin: auto;
           text-align: center;
-          
+
           &--img {
             width: 80%;
             margin: 20px auto;
@@ -128,11 +128,11 @@
         justify-content: space-between;
         width: 90%;
         margin: 5% auto 13%;
-        
+
         &--list {
           margin: auto;
           text-align: center;
-          
+
           &--img {
             width: 70%;
             margin: 20px auto 15px;
@@ -144,6 +144,5 @@
         }
       }
     }
-    
   }
 }
