Airbnb ESLint 적용

--- a/src/Main/views/Main/stylesheet.scss
+++ b/src/Main/views/Main/stylesheet.scss
@@ -6,7 +6,8 @@
     height: 100vh;
     margin: 0 auto;
     position: relative;
-    background-color: $color-theme;
+    background-color: white;
+    // background-color: $color-theme;
   }
 }
 
@@ -16,7 +17,9 @@
     height: 100vh;
     margin: 0 auto;
     position: relative;
-    background-color: $color-theme;
+    background-color: white;
+
+    // background-color: $color-theme;
   }
 }
 
