--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -1,9 +1,12 @@
+@import 'common/stylesheet/index.scss';
+
 .app {
   width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  background-color: $color-theme;
 
   .dialogContainer {
     position: fixed;
