디자인 변경 및 공통된 코드 다른 파일로 분리하여 관리

--- a/src/Main/views/Main/stylesheet.scss
+++ b/src/Main/views/Main/stylesheet.scss
@@ -6,8 +6,7 @@
     height: 100vh;
     margin: 0 auto;
     position: relative;
-    background-color: white;
-    // background-color: $color-theme;
+    background-color: $color-theme;
   }
 }
 
@@ -17,9 +16,7 @@
     height: 100vh;
     margin: 0 auto;
     position: relative;
-    background-color: white;
-
-    // background-color: $color-theme;
+    background-color: $color-theme;
   }
 }
 
