--- a/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
@@ -17,7 +17,7 @@
     width: 90%;
     max-width: 700px;
     border-radius: 25px;
-    background-color: white;
+    background-color: $color-box;
     position: absolute;
     z-index: 1000;
     top: 50%;
