--- a/src/Main/components/AnswerList/stylesheet.scss
+++ b/src/Main/components/AnswerList/stylesheet.scss
@@ -13,7 +13,7 @@
       width: 30%;
       line-height: $line_height-rem;
       margin: 2% 1.5%;
-      background-color: white;
+      background-color: $color-button;
       border-radius: 50px;
       font-size: $font_size-rem;
       text-align: center;
@@ -26,7 +26,7 @@
       width: 30%;
       line-height: $line_height-rem;
       margin: 2% 1.6%;
-      background-color: white;
+      background-color: $color-theme;
       border-radius: 50px;
       border: 3px solid $color-secondary;
       font-size: $font_size-rem;
@@ -37,6 +37,7 @@
 
     &--three:hover {
       border: 3px solid $color-secondary;
+      background-color: $color-theme;
     }
 
     &--answer {
@@ -45,9 +46,9 @@
       margin: auto auto 10px;
       display: flex;
       justify-content: center;
-      background-color: white;
+      background-color: $color-button;
       border-radius: 25px;
-      border: 5px solid $color-theme;
+      border: 5px solid $color-box;
 
       &--one {
         width: 90%;
@@ -68,7 +69,7 @@
       &--pick {
         width: 25px;
         height: 25px;
-        border: 4px solid $color-secondary;
+        border: 3px solid $color-secondary;
         border-radius: 50%;
         margin: auto 30px;
         background-color: $color-secondary;
@@ -76,7 +77,8 @@
     }
 
     &--answer:hover {
-      border: 5px solid $color-secondary;
+      border: 3px solid $color-secondary;
+      background-color: $color-theme;
     }
 
     &--select {
@@ -87,9 +89,9 @@
       margin: auto auto 10px;
       display: flex;
       justify-content: center;
-      background-color: white;
+      background-color: $color-button;
       border-radius: 25px;
-      border: 5px solid $color-secondary;
+      border: 3px solid $color-secondary;
     }
   }
 
@@ -101,7 +103,7 @@
       font-size: 1.1rem;
       line-height: 3rem;
       margin: 2% 1.5%;
-      background-color: white;
+      background-color: $color-button;
       border-radius: 50px;
       text-align: center;
       border: 3px solid $color-theme;
@@ -114,7 +116,7 @@
       line-height: 3rem;
       margin: 2% 1.6%;
       font-size: 1.1rem;
-      background-color: white;
+      background-color: $color-theme;
       border-radius: 50px;
       border: 3px solid $color-secondary;
       text-align: center;
@@ -128,7 +130,7 @@
       margin: auto auto 10px;
       display: flex;
       justify-content: center;
-      background-color: white;
+      background-color: $color-box;
       border-radius: 25px;
       border: 5px solid $color-theme;
 
@@ -164,9 +166,9 @@
       height: 3.5rem;
       margin: auto auto 10px;
       display: flex;
-      background-color: white;
+      background-color: $color-button;
       border-radius: 25px;
-      border: 5px solid $color-secondary;
+      border: 3px solid $color-secondary;
     }
   }
 }
