--- a/src/Main/components/BarGauge/stylesheet.scss
+++ b/src/Main/components/BarGauge/stylesheet.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   width: 100%;
   height: 1.5vh;
-  background-color: white;
+  background-color: $color-button;
 
   &__gauge {
     width: 5%;
