--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -14,12 +14,13 @@
       border-radius: 50%;
       font-size: 3rem;
       font-weight: normal;
-      background-color: white;
+      background-color: $color-button;
     }
 
     &__btn:hover {
       border: 5px solid $color-secondary;
       color: $color-secondary;
+      background-color: $color-theme;
     }
   }
 
@@ -34,7 +35,7 @@
       height: 144px;
       font-size: 2.5rem;
       text-align: center;
-      background-color: white;
+      background-color: $color-theme;
       margin: auto;
 
       span {
@@ -52,7 +53,7 @@
       border-radius: 5px;
       width: 90%;
       height: 65vh;
-      background-color: white;
+      background-color: $color-theme;
       z-index: 10;
 
       button {
@@ -63,7 +64,7 @@
 
       button:hover {
         background-color: $color-secondary;
-        color: white;
+        color: $color-box;
       }
     }
 
@@ -109,12 +110,13 @@
       border-radius: 50%;
       font-size: 2rem;
       font-weight: normal;
-      background-color: white;
+      background-color: $color-box;
     }
 
     &__btn:hover {
       border: 5px solid $color-secondary;
       color: $color-secondary;
+      background-color: $color-theme;
     }
   }
 
@@ -129,7 +131,7 @@
       height: 80px;
       font-size: 1.8rem;
       text-align: center;
-      background-color: white;
+      background-color: $color-theme;
       margin: auto;
 
       span {
@@ -147,7 +149,7 @@
       border-radius: 5px;
       width: 90%;
       height: 65vh;
-      background-color: white;
+      background-color: $color-theme;
       z-index: 10;
 
       button {
@@ -158,7 +160,7 @@
 
       button:hover {
         background-color: $color-secondary;
-        color: white;
+        color: $color-box;
       }
     }
 
