--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -30,7 +30,7 @@
         line-height: 5vh;
         font-size: 2.3rem;
         background-color: $color-secondary;
-        color: white;
+        color: $color-box;
         border-radius: 50px;
         margin-top: 20px;
         text-align: center;
@@ -56,7 +56,7 @@
       img {
         width: 115px;
         height: 115px;
-        border: 2px solid white;
+        border: 2px solid $color-box;
         border-radius: 50%;
         margin: 0 auto 10px;
       }
@@ -64,7 +64,7 @@
       span {
         padding-top: 20px;
         font-size: 1.5rem;
-        color: white;
+        color: $color-box;
       }
     }
 
@@ -109,7 +109,7 @@
         line-height: 50px;
         font-size: 2rem;
         background-color: $color-secondary;
-        color: white;
+        color: $color-box;
         border-radius: 30px;
         margin-top: 30px;
         text-align: center;
@@ -135,7 +135,7 @@
       img {
         width: 65px;
         height: 65px;
-        border: 2px solid white;
+        border: 2px solid $color-box;
         border-radius: 50%;
         margin: 0 auto 10px;
       }
@@ -143,7 +143,7 @@
       span {
         padding-top: 20px;
         font-size: 1rem;
-        color: white;
+        color: $color-box;
       }
     }
 
