--- a/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
@@ -4,7 +4,7 @@
   .prescription {
     width: 95%;
     height: 200px;
-    background-color: white;
+    background-color: $color-theme;
     border-radius: 25px;
     box-shadow: 5px 5px 5px grey;
     margin: 2.5%;
@@ -24,7 +24,7 @@
       bottom: 0;
       right: 0;
       background-color: $color-secondary;
-      color: white;
+      color: $color-box;
       transition: background-color 2s linear 1s;
 
       &--add {
@@ -111,7 +111,7 @@
   .prescription {
     width: 95%;
     height: 150px;
-    background-color: white;
+    background-color: $color-theme;
     border-radius: 25px;
     box-shadow: 5px 5px 5px grey;
     margin: 20px 2.5%;
@@ -131,7 +131,7 @@
       bottom: 0;
       right: 0;
       background-color: $color-secondary;
-      color: white;
+      color: $color-box;
       transition: background-color 2s linear 1s;
 
       &--add {
