--- a/src/common/stylesheet/colors.scss
+++ b/src/common/stylesheet/colors.scss
@@ -1,5 +1,6 @@
-$color-theme: rgb(238, 238, 240);
+$color-box: rgb(238, 238, 240);
 $color-highlight: #f8217f;
 $color-secondary: rgb(237, 85, 92);
 $color-link: #0065ff;
-$color-box: rgb(247, 247, 247);
+$color-theme: rgb(255, 255, 255);
+$color-button: #f2f2f2;
