--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  background-color: $color-theme;
+  background-color: $color-box;
 
   .dialogContainer {
     position: fixed;
