Json 파일에 type과 title로 수정하여 page이동 변경 및 staticQa 컴포넌트를 Qna 컴포넌트로 합쳐서 사용 및 전체적인 컴포넌트 수정

--- a/src/Main/components/AnswerList/stylesheet.scss
+++ b/src/Main/components/AnswerList/stylesheet.scss
@@ -46,7 +46,7 @@
       margin: auto auto 10px;
       display: flex;
       justify-content: center;
-      background-color: $color-button;
+      background-color: $color-theme;
       border-radius: 25px;
       border: 5px solid $color-box;
 
